# drone-arm

./: .gitignore  CHANGES.md  FLASH_TEST.md  P10_VIOLATIONS.md  README.md  arm-none-eabi.ini  build_out.txt  build_output.txt  meson.build  motor_design_results.json
.cache/clangd/index/: addressmap.h.29861A5CDE47DC0F.idx
hardware/: motor.py  motor_design_results_optimized.json  motor_optimizer.py
hardware/esc/esc/: esc.kicad_prl  esc.kicad_pro  esc.kicad_sch  fp-lib-table  sym-lib-table
hardware/esc/esc/BSC030P03NS3G/: BSC030P03NS3G.dcm  BSC030P03NS3G.kicad_sym  BSC030P03NS3G.lib  BSC030P03NS3G.mod  BSC0902NSATMA1.kicad_mod
hardware/esc/esc/STDRIVE101/: QFN50P400X400X100-25N-D.kicad_mod  STDRIVE101TR.dcm  STDRIVE101TR.kicad_sym  STDRIVE101TR.lib  STDRIVE101TR.mod
hardware/esc/esc/XMC1100T016F0016ABXUMA1/: SOP65P640X120-16N.kicad_mod  XMC1100T016F0016ABXUMA1.dcm  XMC1100T016F0016ABXUMA1.kicad_sym  XMC1100T016F0016ABXUMA1.lib  XMC1100T016F0016ABXUMA1.mod
hardware/main/: ERC.json  design-block-lib-table  fp-info-cache  fp-lib-table  main.kicad_pcb  main.kicad_prl  main.kicad_pro  main.kicad_sch  main.plt  sym-lib-table
hardware/main/CC1121RHBR/: CC1121RHBR.dcm  CC1121RHBR.kicad_sym  CC1121RHBR.lib  CC1121RHBR.mod  QFN50P500X500X100-33N-D.kicad_mod
hardware/main/CC1190RGVR/: CC1190RGVR.dcm  CC1190RGVR.kicad_sym  CC1190RGVR.lib  CC1190RGVR.mod  QFN65P400X400X100-17N-D.kicad_mod
hardware/main/ICM-42688-P/: ICM-42688-P.dcm  ICM-42688-P.kicad_sym  ICM-42688-P.lib  ICM-42688-P.mod
hardware/main/LG77LICMD/: 2026-01-19_18-05-38.kicad_sym
hardware/main/LG77LICMD/footprints.pretty/: LG77L_QWS.kicad_mod
hardware/main/LSM6SO32/: LSM6SO32TR.bak
hardware/main/PAM2306DYPAA/: PAM2306DYPAA.dcm  PAM2306DYPAA.kicad_sym  PAM2306DYPAA.lib  PAM2306DYPAA.mod  SON45P300X300X80-13N.kicad_mod
hardware/main/PE64906B-Z/: PE64906B-Z.dcm  PE64906B-Z.kicad_sym  PE64906B-Z.lib  PE64906B-Z.mod  QFN50P200X200X60-11N-D.kicad_mod
hardware/main/TXE8116DGSR/: SOP50P490X110-24N.kicad_mod  TXE8116DGSR.dcm  TXE8116DGSR.kicad_sym  TXE8116DGSR.lib  TXE8116DGSR.mod
include/common/: scheduler_multicore.h
include/hardware/: address_mapped.h  multicore_rp2350B.h  platform_defs.h
include/hardware/regs/: addressmap.h
include/hardware/structs/: adc.h  dma.h  i2c.h  io_bank0.h  pads_bank0.h  pwm.h  sio.h  spi.h  timer.h
src/common/: assert.c  assert.h  common_types.h  crc.c  crc.h  errors.h  filter.c  filter.h  math_utils.c  math_utils.h  meson.build  ring_buffer.c  ring_buffer.h  scheduler.c  scheduler.h  scheduler_multicore.c  utils.h  watchdog.c  watchdog.h
src/esc_controller/: config.c  config.h  current_sense.c  current_sense.h  encoder.c  encoder.h  esc.c  esc.h  foc.c  foc.h  meson.build  pwm.c  pwm.h
src/main_board/: adc.c  clock_internal.h  gpio.c  gpio.h  init.c  init_clocks.c  init_other_clocks.c  init_sys_clk.c  irq.c  linker_script.ld  main.c  meson.build  overclocking.c  timer.c  uart.c
src/main_board/hardware_defs/: adc_config.h  i2c_config.h  pins.c  pins.h  pwm_config.h  spi_config.h  timer_config.h
src/main_board/harware_defs/: pins.h
src/main_board/low_level/: adc.c  adc.h  clocks.h  clocks_init.c  clocks_other.c  clocks_overclock.c  clocks_sys.c  dma.c  dma.h  gpio.c  gpio.h  i2c.c  i2c.h  mpu.c  mpu.h  multicore.c  multicore.h  pins.c  pwm.c  pwm.h  spi.c  spi.h  spi_irq.c  sys.c  sys.h  timer.c  timer.h
src/main_board/low_level/boot_stage2/: boot2_w25q080.S  boot_stage2.ld  boot_stage2_regs.h
src/main_board/sensor_fusion/: ICP-42670.c  ICP-42670.h  lsm6.c  lsm6.h
tests/: test_clock_safety.c  test_main.c
tests/wokwi/: diagram.json  wokwi.toml
tools/: pad_checksum  uf2conv.py
